[gd_scene load_steps=14 format=3 uid="uid://d3nsak46hbo2c"]

[ext_resource type="Script" path="res://game/events/common/event.gd" id="1_kxt6o"]
[ext_resource type="PackedScene" uid="uid://3l0k1cn63ahd" path="res://game/player/player.tscn" id="2_i4nrm"]
[ext_resource type="Script" path="res://game/player/smart_camera.gd" id="2_mo4dc"]
[ext_resource type="Script" path="res://game/events/common/chat/chat.gd" id="3_8d55t"]
[ext_resource type="PackedScene" uid="uid://0wc72b0o2o11" path="res://game/player/ui/player_ui.tscn" id="8_2up8s"]
[ext_resource type="Texture2D" uid="uid://dwtddg0cmagg1" path="res://game/events/common/chat/chat_send.png" id="9_2uw6w"]
[ext_resource type="Script" path="res://game/events/common/chat/event_chat.gd" id="9_ko2fk"]
[ext_resource type="Texture2D" uid="uid://durmmh0vjl0eg" path="res://menu/theme/icons/exit.png" id="13_j0bsh"]
[ext_resource type="Texture2D" uid="uid://d14nbphg5o3a" path="res://game/events/common/chat/chat.png" id="14_05fx8"]

[sub_resource type="ViewportTexture" id="ViewportTexture_u8vru"]
viewport_path = NodePath("MinimapViewport")

[sub_resource type="Animation" id="Animation_4bxhi"]
resource_name = "Intro"
length = 5.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tint:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3.5, 3.75),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0.25098), Color(0, 0, 0, 0.25098), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Title:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.25, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Text:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5, 1.75, 3.25, 3.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1e-05, 1e-05), Vector2(1, 1), Vector2(1, 1), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GO:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 3.5, 3.75, 4.6, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1e-05, 1e-05), Vector2(1, 1), Vector2(1, 1), Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Main:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Main:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 5, 5.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_atj0b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tint:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Title:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Text:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GO:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Main:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Main:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ctugk"]
_data = {
"Intro": SubResource("Animation_4bxhi"),
"RESET": SubResource("Animation_atj0b")
}

[node name="Event" type="Node" groups=["Event"]]
script = ExtResource("1_kxt6o")
player_scenes = Array[PackedScene]([ExtResource("2_i4nrm")])

[node name="Entities" type="Node2D" parent="."]

[node name="Projectiles" type="Node2D" parent="." groups=["ProjectilesParent"]]

[node name="Other" type="Node2D" parent="." groups=["OtherParent"]]

[node name="VFX" type="Node2D" parent="." groups=["VFXParent"]]

[node name="EntitiesSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("../Entities")
spawn_limit = 10

[node name="ProjectilesSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("../Projectiles")
spawn_limit = 100

[node name="OtherSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("../Other")
spawn_limit = 50

[node name="Camera" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)
position_smoothing_enabled = true
position_smoothing_speed = 10.0
script = ExtResource("2_mo4dc")

[node name="MinimapRemote" type="RemoteTransform2D" parent="Camera"]
remote_path = NodePath("../../MinimapViewport/Camera")
update_rotation = false
update_scale = false

[node name="UI" type="CanvasLayer" parent="."]
layer = 5

[node name="Main" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Minimap" type="TextureRect" parent="UI/Main"]
self_modulate = Color(1, 1, 1, 0.564706)
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 272.0
offset_bottom = 272.0
texture = SubResource("ViewportTexture_u8vru")

[node name="PlayerUI" parent="UI/Main" instance=ExtResource("8_2up8s")]
layout_mode = 1

[node name="Leave" type="Button" parent="UI/Main"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -72.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 72.0
grow_horizontal = 0
icon = ExtResource("13_j0bsh")

[node name="Chat" type="Button" parent="UI/Main"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -72.0
offset_right = 72.0
offset_bottom = -16.0
grow_vertical = 0
toggle_mode = true
icon = ExtResource("14_05fx8")

[node name="ChatPreview" type="VBoxContainer" parent="UI/Main"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -368.0
offset_right = 496.0
offset_bottom = -80.0
grow_vertical = 0
mouse_filter = 2
alignment = 2
script = ExtResource("9_ko2fk")

[node name="ChatPanel" type="PanelContainer" parent="UI/Main"]
auto_translate_mode = 2
visible = false
self_modulate = Color(1, 1, 1, 0.878431)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -480.0
offset_right = 496.0
offset_bottom = -80.0
grow_vertical = 0
script = ExtResource("3_8d55t")
chat_button_path = NodePath("../Chat")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Main/ChatPanel"]
auto_translate_mode = 1
layout_mode = 2

[node name="Messages" type="RichTextLabel" parent="UI/Main/ChatPanel/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
scroll_following = true
shortcut_keys_enabled = false
meta_underlined = false
hint_underlined = false

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Main/ChatPanel/VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="UI/Main/ChatPanel/VBoxContainer/HBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Сообщение..."
max_length = 80

[node name="Send" type="TextureButton" parent="UI/Main/ChatPanel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
texture_normal = ExtResource("9_2uw6w")
ignore_texture_size = true
stretch_mode = 0

[node name="Intro" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Tint" type="ColorRect" parent="UI/Intro"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="Title" type="Label" parent="UI/Intro"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -40.0
offset_right = 400.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(400, 40)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 48
text = "ИГРА"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="UI/Intro/Title"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 4
text = "Описание"
horizontal_alignment = 1

[node name="Text" type="Label" parent="UI/Intro"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -64.0
offset_right = 160.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(160, 64)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
text = "Описание 2"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="GO" type="Label" parent="UI/Intro"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -480.0
offset_top = -80.0
offset_right = 480.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(480, 80)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 80
text = "ВПЕРЁД!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/Intro"]
libraries = {
"": SubResource("AnimationLibrary_ctugk")
}

[node name="MinimapViewport" type="SubViewport" parent="."]
disable_3d = true
gui_disable_input = true
canvas_cull_mask = 4293918722
size = Vector2i(256, 256)

[node name="Camera" type="Camera2D" parent="MinimapViewport"]
zoom = Vector2(0.05, 0.05)

[connection signal="local_player_created" from="." to="UI/Main/PlayerUI" method="_on_local_player_created"]
[connection signal="pressed" from="UI/Main/Leave" to="." method="_on_leave_game_pressed"]
[connection signal="toggled" from="UI/Main/Chat" to="UI/Main/ChatPreview" method="_on_chat_toggled"]
[connection signal="toggled" from="UI/Main/Chat" to="UI/Main/ChatPanel" method="_on_chat_toggled"]
[connection signal="message_posted" from="UI/Main/ChatPanel" to="UI/Main/ChatPreview" method="_on_message_posted"]
[connection signal="text_submitted" from="UI/Main/ChatPanel/VBoxContainer/HBoxContainer/LineEdit" to="UI/Main/ChatPanel" method="send_message" unbinds=1]
[connection signal="pressed" from="UI/Main/ChatPanel/VBoxContainer/HBoxContainer/Send" to="UI/Main/ChatPanel" method="send_message"]
